# market-data-replay-engine

./: .gitignore  CMakeLists.txt  README.md  bench_results.csv
.cache/clangd/index/: main.cpp.0A6F604AFA86BF9E.idx  market_data_loader.cpp.536E3B960A784AE3.idx  market_data_loader.hpp.29E2817EA05C9D8B.idx  tick.hpp.29677D73B610AC05.idx
data/: parallel_ticks.csv  sample_ticks.csv
docs/: optimization_log.md
include/: backtest_report.hpp  backtest_runner.hpp  market_data_loader.hpp  matching_engine.hpp  metrics.hpp  order.hpp  order_sink.hpp  parallel_replay_executor.hpp  portfolio.hpp  replay_engine.hpp  strategy.hpp  symbol_table.hpp  tick.hpp  trade.hpp
src/: main.cpp  market_data_loader.cpp  matching_engine.cpp  parallel_replay_executor.cpp  replay_engine.cpp
tests/: CMakeLists.txt  test_market_data_loader.cpp  test_parallel_consistency.cpp
